--- a/static/css/searchwrap2.css
+++ b/static/css/searchwrap2.css
@@ -1,7 +1,7 @@
 .searchwrap {
     height: 50px;
     width: 600px;
-    border-radius: 30px;;
+    border-radius: 30px;
     background-color: tomato;
     padding: 0px 20px;
     box-sizing: border-box;
