--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
                     <span id="java">JAVA</span>
                 </label>
                 <label for="javascript" title="javascript">
-                    <button id="javascript" name="keyword" value="javsscript">
+                    <button id="javascript" name="keyword" value="javascript">
                         <img src="../static/images/javascript.png">
                     </button>
                     <span id="javascript">JAVASCRIPT</span>
